--- a/about.html
+++ b/about.html
@@ -39,8 +39,10 @@
 
   <!-- MAIN CONTENT -->
   <main>
-    <section class="before-we-begin fade-in-section" style="align-items: flex-start; text-align: left; padding: 40px 30px; max-width: 900px; margin: 0 auto;">
-      <h1 style="color: #00bcd4; margin-bottom: 25px;">About Me</h1>
+    <section class="before-we-begin fade-in-section">
+      <h1>About Me</h1>
+      <a href="index.html" class="button">Back to Home</a>
+    </section>
 
       <!-- PASTE EACH PARAGRAPH IN <p> TAGS BELOW -->
       
