--- a/about.html
+++ b/about.html
@@ -92,3 +92,51 @@
   </script>
 </body>
 </html>
+<section class="my-goals-section fade-in-section">
+  <h2>My Goals</h2>
+  <p class="subheader">My personal and academic goals while at SLCC</p>
+
+  <div class="goals-columns">
+    <div>
+      <h3>Short-Term Goals</h3>
+      <ul>
+        <li><strong>Practice Self-Compassion and Build Confidence:</strong> ‘As I navigate through the challenges... learning from mistakes is part of the process.’</li>
+        <li><strong>Reach Out to Professors During Office Hours:</strong> I will make an effort to connect... help me succeed in my courses.</li>
+        <li><strong>Form Study Groups with Classmates:</strong> I will find a study buddy... gain different perspectives.</li>
+        <li><strong>Develop Consistent Study Habits:</strong> I will establish a regular routine... plan ahead for exams.</li>
+        <li><strong>Take Care of My Mental Health:</strong> I will focus on self-care, relaxation, and stress management.</li>
+      </ul>
+    </div>
+
+    <div>
+      <h3>Long-Term Goals</h3>
+      <ul>
+        <li><strong>Graduate with Dual Degrees:</strong> Criminal Justice from SLCC and Nursing from Joyce University.</li>
+        <li><strong>Secure a Specialized Career:</strong> Forensic nursing or healthcare law enforcement.</li>
+        <li><strong>Achieve Financial Stability:</strong> Support myself and give back to my family.</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="term-pathway">
+    <h3>My Pathway</h3>
+
+    <h4>Spring 2025</h4>
+    <ul>
+      <li>HON-2060, HON-2100, ETHS-2430, POLS-2100, ENGL-2020</li>
+    </ul>
+    <p><em>Reflection:</em> What went well? What are you most proud of?</p>
+
+    <h4>Summer 2025</h4>
+    <ul>
+      <li>ART 1010, PSY 1100</li>
+    </ul>
+    <p><em>Reflection:</em> What are some areas you could improve?</p>
+
+    <h4>Fall 2025</h4>
+    <ul>
+      <li>COMM-1010, HLTH-1500</li>
+    </ul>
+    <p><em>Reflection:</em> How did you stay motivated?</p>
+  </div>
+</section>
