--- a/humanities.html
+++ b/humanities.html
@@ -42,20 +42,27 @@
   <p><em>Human Experience Through Storytelling</em> — aka the class that made me realize oral history is just ancestral chisme with citations. This page reflects my final project for Honors 2100, a course that asked what it means to be human by examining the stories we tell, how we tell them, and how they shape our identity, culture, and survival.</p>
 
   <h2>Signature Project: Becoming Selena</h2>
-
   <p>Selena wasn’t just a singer — she was <em>the</em> blueprint. A baddie before the word had hashtags. This project, <strong>“Becoming Selena”</strong>, reimagines her legacy as an anatomy chart because every part of her — the brain, the voice, the heart, the hands — tells a story of cultural defiance, dual identity, and beauty that broke barriers. She didn’t just perform; she stitched herself into culture. Through this visual piece, I turned her silhouette into a storytelling map of survival, joy, and generational impact. Period.</p>
 
+  <!-- Image placeholder (uncomment when ready)
   <img src="images/Becoming Selena.png" alt="Becoming Selena project poster" style="width:100%; max-width:800px; margin: 30px auto; display: block; border-radius: 10px; box-shadow: 0 0 15px rgba(0,0,0,0.6);">
+  -->
 
   <h2>Project Explanation Sheet (PDF)</h2>
   <p>This sheet breaks down the symbolism behind the body parts, metaphors, and how I tied her legacy to this class’s core themes like identity, storytelling, and survival across cultures.</p>
-  <a href="files/Becoming Selena_ The Anatomy of a Cultural Icon.pdf" target="_blank" class="button">📄 View Full Explanation Sheet</a>
+
+  <div style="text-align: center;">
+    <a href="files/Becoming Selena_ The Anatomy of a Cultural Icon.pdf" target="_blank" class="button">📄 View Full Explanation Sheet</a>
+  </div>
 
   <h2>Reflection</h2>
   <p>[Reflection coming soon — wait 'til you hear what this class unlocked.]</p>
 
-  <a href="courses.html" class="button" style="margin-top: 40px;">← Back to Courses</a>
+  <div style="text-align: center;">
+    <a href="courses.html" class="button">← Back to Courses</a>
+  </div>
 </main>
+
 
 
 <footer>
