--- a/humanities.html
+++ b/humanities.html
@@ -36,7 +36,7 @@
   <a href="personal-projects.html">Personal Projects</a>
 </div>
 
-<main class="centered-content-block fade-in-section">
+<main class="centered-content-block humanities-course fade-in-section">
   <h1>Humanities (HU) – Honors 2100</h1>
   <h2>Intellectual Traditions: The Experience of Being</h2>
   <p><em>Human Experience Through Storytelling</em> — aka the class that made me realize oral history is just ancestral chisme with citations. This page reflects my final project for Honors 2100, a course that asked what it means to be human by examining the stories we tell, how we tell them, and how they shape our identity, culture, and survival.</p>
