--- a/humanities.html
+++ b/humanities.html
@@ -44,9 +44,7 @@
   <h2>Signature Project: Becoming Selena</h2>
   <p>Selena wasn’t just a singer — she was <em>the</em> blueprint. A baddie before the word had hashtags. This project, <strong>“Becoming Selena”</strong>, reimagines her legacy as an anatomy chart because every part of her — the brain, the voice, the heart, the hands — tells a story of cultural defiance, dual identity, and beauty that broke barriers. She didn’t just perform; she stitched herself into culture. Through this visual piece, I turned her silhouette into a storytelling map of survival, joy, and generational impact. Period.</p>
 
-  <!-- Image placeholder (uncomment when ready)
   <img src="images/Becoming Selena.png" alt="Becoming Selena project poster" style="width:100%; max-width:800px; margin: 30px auto; display: block; border-radius: 10px; box-shadow: 0 0 15px rgba(0,0,0,0.6);">
-  -->
 
   <h2>Project Explanation Sheet (PDF)</h2>
   <p>This sheet breaks down the symbolism behind the body parts, metaphors, and how I tied her legacy to this class’s core themes like identity, storytelling, and survival across cultures.</p>
@@ -56,7 +54,20 @@
   </div>
 
   <h2>Reflection</h2>
-  <p>[Reflection coming soon — wait 'til you hear what this class unlocked.]</p>
+  <p>This class made me rethink what a story is — and who gets to tell it. I came in thinking we’d just analyze literature, but we ended up analyzing ourselves. We questioned who’s visible in history, who gets erased, and how cultural identity isn’t something you inherit — it’s something you carry, reframe, and defend. Selena became the perfect canvas for that. Through her, I got to tell a story that wasn’t just academic — it was personal, historical, and emotional all at once.</p>
+
+  <p>This project let me explore the body as metaphor, as archive, as power. Her heart was Spanglish. Her eyes saw past borders. Her voice reached across generations. That anatomy chart? That was the only way to do her justice. But through that process, I started realizing that every part of me has also been shaped by language, movement, silence, and code-switching. I wasn’t just making a final. I was documenting how I’ve lived between two cultures and how I’ve started claiming space in both.</p>
+
+  <p>This class changed how I think, write, and express. It gave me space to reflect, not just react. And it reminded me that storytelling isn’t about performance — it’s about presence. I walked out of this course knowing that my voice matters, my perspective is valid, and even when I feel like I don’t belong, my story does. It belongs here.</p>
+
+  <h2>Honors Class – Spring 2025</h2>
+  <p>Humanities (HU) wasn’t just a class about storytelling. It was a living story. These people challenged my thinking, held space for messy questions, and helped shape the voice you see all over this page. This is the crew that saw me through it — chaos, caffeine, and all.</p>
+
+  <img src="images/honors_class_final.png" alt="Honors 2100 Class Photo" style="width:100%; max-width:750px; margin: 30px auto; display: block; border-radius: 12px; box-shadow: 0 0 15px rgba(0, 188, 212, 0.5);">
+
+  <p style="text-align: center; font-style: italic; color: #ccc;">
+    Yes, I’m on the far right. No, my mouth isn’t closed. Yes, I still ate academically.
+  </p>
 
   <div style="text-align: center;">
     <a href="courses.html" class="button">← Back to Courses</a>
