--- a/humanities.html
+++ b/humanities.html
@@ -69,8 +69,8 @@
   <p>The class served to connect with parts of my education along with my life experiences. Through our studies in Latin American Studies I learned how Selena performed beyond musical skills since she exhibited a complete cultural synthesis named mestizaje. The study of Criminal Justice at school brought me to thoughts about visibility and justice while Selena's story showed me how cultural representation operates as justice. My Nursing studies about human anatomy allowed me to focus on this creative assignment where I investigated its metaphorical aspects. A body of meaning. A body of memory.</p>
   
   <p>This was more than a project. It was a translation. A reflection. A thank-you. Through her existence Selena transformed the standards of living for all who share a similar background.</p>
-  <h2>Honors Class – Spring 2025</h2>
-  <p>Humanities (HU) wasn’t just a class about storytelling. It was a living story. These people challenged my thinking, held space for messy questions, and helped shape the voice you see all over this page. This is the crew that saw me through it — chaos, caffeine, and all.</p>
+  <h2>HON2100 – Spring 2025</h2>
+  <p>This class wasn’t just a class about storytelling — it was the damn plot. These people didn’t just show up, they showed out. They challenged my thinking, held space for chaos and contradiction, and helped me sharpen the exact voice spilling all over this page. This is the crew that held me down through it all — breakdowns, breakthroughs, and an unholy amount of caffeine.</p>
 
   <img src="images/honors_class_final.png" alt="Honors 2100 Class Photo" style="width:100%; max-width:750px; margin: 30px auto; display: block; border-radius: 12px; box-shadow: 0 0 15px rgba(0, 188, 212, 0.5);">
 
