--- a/humanities.html
+++ b/humanities.html
@@ -70,12 +70,12 @@
   
   <p>This was more than a project. It was a translation. A reflection. A thank-you. Through her existence Selena transformed the standards of living for all who share a similar background.</p>
   <h2>HON2100 – Spring 2025</h2>
-  <p>This class wasn’t just a class about storytelling — it was the damn plot. These people didn’t just show up, they showed out. They challenged my thinking, held space for chaos and contradiction, and helped me sharpen the exact voice spilling all over this page. This is the crew that held me down through it all — breakdowns, breakthroughs, and an unholy amount of caffeine.</p>
+  <p>This class wasn’t just a class about storytelling — it was the damn plot. These people didn’t just show up, they showed out. They challenged my thinking, held space for chaos and contradiction, and helped me sharpen the exact voice spilling all over this page. This is the crew that held me down through it all — breakdowns, breakthroughs, and an unholy amount of screen time.</p>
 
   <img src="images/honors_class_final.png" alt="Honors 2100 Class Photo" style="width:100%; max-width:750px; margin: 30px auto; display: block; border-radius: 12px; box-shadow: 0 0 15px rgba(0, 188, 212, 0.5);">
 
   <p style="text-align: center; font-style: italic; color: #ccc;">
-    Yes, I’m on the far right. No, my mouth isn’t closed. Yes, I still ate academically.
+    Me on the far right, dehydrated, still ate, both academically and literally.
   </p>
 
   <div style="text-align: center;">
