--- a/humanities.html
+++ b/humanities.html
@@ -90,38 +90,19 @@
 </footer>
 
 <script>
-function toggleMenu() {
-  const mobileNav = document.getElementById('mobile-nav');
-  const hamburgerIcon = document.getElementById('hamburger-menu');
-  const body = document.body;
-
-  mobileNav.classList.toggle('active');
-  hamburgerIcon.classList.toggle('is-active');
-
-  if (mobileNav.classList.contains('active')) {
-    body.classList.add('no-scroll');
-  } else {
-    body.classList.remove('no-scroll');
-  }
-}
-</script>
-
-<script>
 document.addEventListener('DOMContentLoaded', function() {
   const faders = document.querySelectorAll('.fade-in-section');
 
   const appearOptions = {
-    threshold: 0.2,
-    rootMargin: "0px 0px -100px 0px"
+    threshold: 0,
+    rootMargin: "0px 0px -20% 0px"
   };
 
-  const appearOnScroll = new IntersectionObserver(function(entries, appearOnScroll) {
+  const appearOnScroll = new IntersectionObserver((entries, observer) => {
     entries.forEach(entry => {
-      if (!entry.isIntersecting) {
-        return;
-      } else {
+      if (entry.isIntersecting) {
         entry.target.classList.add('is-visible');
-        appearOnScroll.unobserve(entry.target);
+        observer.unobserve(entry.target);
       }
     });
   }, appearOptions);
